feat(l2): based portal (#1992)
**Motivation**

<!-- Why does this pull request exist? What are its goals? -->

Going Rogue

**Description**

This PR intervenes with the RPC methods `eth_sendRawTransaction`,
`engine_forkchoiceUpdatedV3`, `engine_getPayloadV3`, and
`engine_newPayloadV3` relaying the request to the current gateway and
falling back to the local node's response if the first one fails.

A new method `relay_to_gateway_or_fallback` method was added to the
trait `RpcHandler` whose default implementation runs the fallback. RPC
methods that should be relayed to the gateway must override this default
implementation.

**How to run**
```Shell
cd crates/l2
cp .env.example .env
make init BASED=true
```

**How to test**
```
cast send --value 1000000000000000000 --private-key 0x385c546456b6a603a1cfcaa9ec9494ba4832da08dd6bcf4de9a71e4a01b74924 0x0726022da930b60953E19C6CDC08032C8a9FBc7e --rpc-url http://localhost:1729
```

As the gateway is not yet integrated with `ethrex`, you should see in
the logs that `eth_sendRawTransaction`, `engine_forkchoiceUpdatedV3`,
`engine_getPayloadV3`, and `engine_newPayloadV3` are being relayed to
the gateway and immediately after there's a warning saying that this
failed and that the fallback was called.

**What you should see in the logs**

Block production
```Shell
2025-02-18T19:43:18.904091Z  INFO ethrex_dev::block_producer: Producing block
2025-02-18T19:43:18.904373Z  INFO ethrex_rpc::engine::fork_choice: Relaying engine_forkchoiceUpdatedV3 to gateway
2025-02-18T19:43:18.904413Z  WARN ethrex_rpc::engine::fork_choice: Gateway engine_forkchoiceUpdatedV3 failed, falling back to local node error=Err(Internal("Could not relay engine_forkchoiceUpdatedV3 to gateway: reqwest error: builder error"))
2025-02-18T19:43:18.905814Z  INFO ethrex_rpc::engine::fork_choice: Fork choice updated includes payload attributes. Creating a new payload.
2025-02-18T19:43:18.906321Z  INFO ethrex_rpc::engine::payload: Relaying engine_getPayloadV3 to gateway
2025

--- a/cmd/ethrex/Cargo.toml
+++ b/cmd/ethrex/Cargo.toml
@@ -49,3 +49,4 @@ libmdbx = ["ethrex-storage/libmdbx"]
 redb = ["dep:redb", "ethrex-storage/redb"]
 blst = ["ethrex-vm/blst"]
 l2 = ["dep:ethrex-l2", "ethrex-vm/l2"]
+based = ["l2", "ethrex-rpc/based"]
