Move toml parsing back to l2

--- a/crates/l2/Cargo.toml
+++ b/crates/l2/Cargo.toml
@@ -28,6 +28,7 @@ keccak-hash.workspace = true
 envy = "0.4.2"
 thiserror.workspace = true
 directories = "5.0.1"
+toml = { version = "0.8.19", features = ["parse"] }
 
 zkvm_interface = { path = "./prover/zkvm/interface/", default-features = false }
 
