--- a/crates/l2/docker-compose-l2.yaml
+++ b/crates/l2/docker-compose-l2.yaml
@@ -13,9 +13,9 @@ services:
       dockerfile: ./crates/l2/contracts/Dockerfile
     volumes:
       - ./contracts:/contracts
-      - .env:/.env
-    env_file:
-      - .env
+      - .config:/.config
+    config_file:
+      - .config
     environment:
       - ETH_RPC_URL=http://ethrex_l1:8545
       - DEPLOYER_CONTRACTS_PATH=/contracts
@@ -41,7 +41,7 @@ services:
       - ENV_FILE=/.env
     volumes:
       - ../../test_data/genesis-l2.json:/genesis-l2.json
-      - .env:/.env:ro
+      - .config.toml:/.config.toml:ro
     command: --network /genesis-l2.json --http.addr 0.0.0.0 --http.port 1729 --authrpc.port 8552
     depends_on:
       contract_deployer:
