chore(l1): move `ethrex-trie` to common folder. (#2051)
**Motivation**
Even though the trie is related to a structure that is stored on disk,
we have decoupled the trie logic from the storing (see `trie_db`).

Some modules like the types, just use the trie logic to calculate hash
tree roots, without storing anything, for example:
https://github.com/lambdaclass/ethrex/blob/51b7dcbac7226e748b711ced1920bcf11b326577/crates/common/types/account.rs#L158

Geth does something similar with:
- https://github.com/ethereum/go-ethereum/tree/master/trie
- https://github.com/ethereum/go-ethereum/tree/master/triedb

So the trie logic should go in `common`, whereas the trie db
implementations should go in `storage`.

Finally, this would simplify the dependencies if we decided to merge
common, trie, and rpc into one crate.

--- a/crates/l2/prover/zkvm/interface/Cargo.toml
+++ b/crates/l2/prover/zkvm/interface/Cargo.toml
@@ -12,8 +12,8 @@ thiserror = "2.0.9"
 ethrex-common = { path = "../../../../common/", default-features = false }
 ethrex-vm = { path = "../../../../vm", default-features = false }
 ethrex-rlp = { path = "../../../../common/rlp", default-features = false }
-ethrex-storage = { path = "../../../../storage/store", default-features = false }
-ethrex-trie = { path = "../../../../storage/trie", default-features = false }
+ethrex-storage = { path = "../../../../storage", default-features = false }
+ethrex-trie = { path = "../../../../common/trie", default-features = false }
 
 [build-dependencies]
 risc0-build = { version = "1.2.2" }
