--- a/crates/l2/docker-compose-l2.yaml
+++ b/crates/l2/docker-compose-l2.yaml
@@ -15,7 +15,7 @@ services:
       - ./contracts:/contracts
       - .config.toml:/.config.toml
     env_file:
-      - .env
+      - config.toml
     environment:
       - ETH_RPC_URL=http://ethrex_l1:8545
       - DEPLOYER_CONTRACTS_PATH=/contracts
