--- a/crates/l2/prover/Makefile
+++ b/crates/l2/prover/Makefile
@@ -1,41 +1,43 @@
+# risc0
 
-.PHONY: perf_test_sp1_proving
-
-ROOT_DIRECTORY := ../../..
-
-########################################################################
-###############                 RISC0                    ###############
-########################################################################
 .PHONY: perf-risc0 perf-risc0-gpu 
-
-RISC0_DEV_MODE?=1
 RUST_LOG?="info"
+
 perf-risc0:
-	@echo "Using RISC0_DEV_MODE: ${RISC0_DEV_MODE}"
-	RISC0_DEV_MODE=${RISC0_DEV_MODE} RUST_LOG=${RUST_LOG} cargo test --release --test perf_zkvm --features "risc0,l2" -- test_performance_zkvm --exact --show-output
+	RUST_LOG=${RUST_LOG} cargo test --release --test perf_zkvm --features "risc0,l2" -- test_performance_zkvm --exact --show-output
 
 perf-risc0-gpu:
 	RUSTFLAGS="-C target-cpu=native" RISC0_DEV_MODE=0 RUST_LOG=${RUST_LOG} cargo test --release --test perf_zkvm --features "risc0,l2,gpu" -- test_performance_zkvm --exact --show-output
 
-########################################################################
-###############                  SP1                     ###############
-########################################################################
-########################################################################
-.PHONY: perf-sp1 perf-sp1-gpu 
+# sp1
 
-SP1_PROVER?=mock
+.PHONY: perf-sp1 perf-sp1-gpu 
 RUST_LOG?="info"
+
 perf-sp1:
 	@echo "Using SP1_PROVER: ${SP1_PROVER}"
-	SP1_PROVER=${SP1_PROVER} RUST_LOG=${RUST_LOG} cargo test --release --test perf_zkvm --features "sp1,l2" -- test_performance_zkvm --exact --show-output
+	RUST_LOG=${RUST_LOG} cargo test --release --test perf_zkvm --features "sp1,l2" -- test_performance_zkvm --exact --show-output
 	
 perf-sp1-gpu:
 	@echo "Using SP1_PROVER: ${SP1_PROVER}"
-	SP1_PROVER=${SP1_PROVER} RUST_LOG=${RUST_LOG} cargo test --release --test perf_zkvm --features "sp1,l2,gpu" -- test_performance_zkvm --exact --show-output
+	RUST_LOG=${RUST_LOG} cargo test --release --test perf_zkvm --features "sp1,l2,gpu" -- test_performance_zkvm --exact --show-output
+
+# pico
+
+.PHONY: perf-pico perf-pico-gpu 
+RUST_LOG?="info"
+
+perf-pico:
+	RUST_LOG=${RUST_LOG} cargo +nightly test --release --test perf_zkvm --features "pico,l2" -- test_performance_zkvm --exact --show-output
+	
+perf-pico-gpu:
+	RUST_LOG=${RUST_LOG} cargo +nightly test --release --test perf_zkvm --features "pico,l2,gpu" -- test_performance_zkvm --exact --show-output
 
 ########################################################################
 ########## L2 Prover comparison with rsp. Uses GPU by default ##########
 ########################################################################
+ROOT_DIRECTORY := ../../..
+
 ETHREX_L2_BIN := ./target/release/ethrex_l2
 RSP_BIN := ./target/release/rsp
 
