--- a/crates/l2/prover/bench/Cargo.toml
+++ b/crates/l2/prover/bench/Cargo.toml
@@ -50,5 +50,5 @@ pico = ["zkvm_interface/pico", "ethrex-prover/pico", "ethrex-l2/pico"]
 risc0 = ["zkvm_interface/risc0", "ethrex-prover/risc0", "ethrex-l2/risc0"]
 sp1 = ["zkvm_interface/sp1", "ethrex-prover/sp1", "ethrex-l2/sp1"]
 gpu = ["ethrex-prover/gpu"]
-l2 = ["ethrex-vm/l2"]
+l2 = ["ethrex-vm/l2", "zkvm_interface/l2"]
 default = ["sp1"]
