--- a/.github/workflows/ci_l2_prover.yaml
+++ b/.github/workflows/ci_l2_prover.yaml
@@ -65,7 +65,7 @@ jobs:
       - name: Build prover and SP1's zkVM
         run: |
           cd crates/l2/prover
-          cargo build --release --features build_sp1
+          cargo build --release --features sp1
       - name: Test Prover Execution
         run: |
           cd crates/l2/prover
