add clippy component

--- a/.github/workflows/ci_l2_prover_nightly.yaml
+++ b/.github/workflows/ci_l2_prover_nightly.yaml
@@ -30,7 +30,7 @@ jobs:
         uses: dtolnay/rust-toolchain@nightly
         with:
           toolchain: nightly-2024-11-27
-          components: rust-src
+          components: rust-src, clippy
       - name: Add Rust Cache
         uses: Swatinem/rust-cache@v2
       - name: ${{ matrix.action.command }} Command
