--- a/crates/l2/Cargo.toml
+++ b/crates/l2/Cargo.toml
@@ -20,6 +20,8 @@ ethrex-blockchain.workspace = true
 ethrex-storage.workspace = true
 ethrex-vm.workspace = true
 ethrex-dev = { path = "../../crates/blockchain/dev", default-features = false }
+ethrex-metrics = { path = "../blockchain/metrics", default-features = false }
+ethrex-sdk = { path = "./sdk" }
 hex.workspace = true
 bytes.workspace = true
 jsonwebtoken.workspace = true
@@ -29,20 +31,10 @@ envy = "0.4.2"
 thiserror.workspace = true
 directories = "5.0.1"
 
-ethrex-sdk = { path = "./sdk" }
-
 zkvm_interface = { path = "./prover/zkvm/interface/", default-features = false }
-
-risc0-zkvm = { version = "1.2.2", optional = true }
-sp1-sdk = { version = "4.1.1", optional = true }
-sp1-recursion-gnark-ffi = { version = "4.1.1", optional = true }
-pico-vm = { git = "https://github.com/brevis-network/pico", optional = true }
-
-ethrex-metrics = { path = "../blockchain/metrics", default-features = false }
 
 [dev-dependencies]
 rand = "0.8.5"
-
 
 [lib]
 path = "./l2.rs"
@@ -58,6 +50,6 @@ panic = "deny"
 [features]
 default = []
 metrics = ["ethrex-metrics/l2"]
-pico = ["zkvm_interface/pico", "dep:pico-vm"]
-risc0 = ["zkvm_interface/risc0", "dep:sp1-sdk"]
-sp1 = ["zkvm_interface/sp1", "dep:risc0-zkvm"]
+pico = ["zkvm_interface/pico"]
+risc0 = ["zkvm_interface/risc0"]
+sp1 = ["zkvm_interface/sp1"]
