--- a/crates/l2/docker-compose-l2.yaml
+++ b/crates/l2/docker-compose-l2.yaml
@@ -13,6 +13,11 @@ services:
       dockerfile: ./crates/l2/contracts/Dockerfile
     volumes:
       - ./contracts:/contracts
+      # NOTE: this will copy the `config.toml` present in *this
+      # directory* to the directory inside the docker container where
+      # the ethrex binary will reside (${PWD}).
+      # At the time of writing, ${PWD}=/usr/local/bin/ (check
+      # crates/l2/Dockerfile)
       - ./config.toml:${PWD}/config.toml
     environment:
       - ETH_RPC_URL=http://ethrex_l1:8545
