--- a/.github/config/assertoor/el-stability-check.yaml
+++ b/.github/config/assertoor/el-stability-check.yaml
@@ -23,25 +23,19 @@ tasks:
       title: "Check if EL clients are synced"
 
 - name: run_task_matrix
-  title: "Check block proposals from all client pairs"
-  timeout: 4m
+  title: "Check block proposals from all client pairs with tx spammer working and >= 240 transactions"
+  timeout: 8m
   configVars:
     matrixValues: "validatorPairNames"
   config:
     runConcurrent: true
     matrixVar: "validatorPairName"
     task:
+      minTransactionCount: 240
       name: check_consensus_block_proposals
       title: "Wait for block proposal from ${validatorPairName}"
       configVars:
         validatorNamePattern: "validatorPairName"
-
-- name: check_consensus_block_proposals
-  title: "Check the tx spammer is working as expected for block proposal with >= 240 transactions"
-  timeout: 6m
-  config:
-    minTransactionCount: 240
-    validatorNamePattern: "[\\d]-ethrex-lighthouse"
 
 - name: run_tasks_concurrent
   title: "Check chain stability (reorgs and forks)"
