Remove previous comments about leaky execution after 10+ runs

--- a/.github/workflows/ci_l1.yaml
+++ b/.github/workflows/ci_l1.yaml
@@ -117,7 +117,7 @@ jobs:
           - name: Transaction Check
             enclave_name: "ethrex-assertoor-tx"
             ethereum_package_args: "./.github/config/assertoor/network_params_tx.yaml"
-          - name: Stability Check
+          - name: Blob & Stability Check
             enclave_name: "ethrex-assertoor-blob"
             ethereum_package_args: "./.github/config/assertoor/network_params_blob.yaml"
 
