Add conf.toml to the docker_compose-l2.yaml and ci_l2.yaml
Signed-off-by: Tomas Fabrizio Orsi <tomas.orsi@lambdaclass.com>

--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -35,4 +35,5 @@ jobs:
         run: |
           cd crates/l2
           cp .env.example .env
+          cp config_example.toml config.toml
           make ci_test
