--- a/.github/workflows/ci_l1.yaml
+++ b/.github/workflows/ci_l1.yaml
@@ -30,6 +30,9 @@ jobs:
           toolchain: ${{ env.RUST_VERSION }}
           components: rustfmt, clippy
 
+      - name: Add Rust Cache
+        uses: Swatinem/rust-cache@v2
+
       - name: Run cargo check
         run: cargo check
 
@@ -57,6 +60,9 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ env.RUST_VERSION }}
+
+      - name: Caching
+        uses: Swatinem/rust-cache@v2
 
       - name: Run tests
         run: |
