--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -28,6 +28,9 @@ jobs:
         with:
           toolchain: ${{ env.RUST_VERSION }}
 
+      - name: Caching
+        uses: Swatinem/rust-cache@v2
+
       - name: Run L2 integration test
         run: |
           cd crates/l2
