--- a/.github/workflows/ci_l2_contracts.yaml
+++ b/.github/workflows/ci_l2_contracts.yaml
@@ -23,6 +23,8 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
       - name: Install solc
         uses: pontem-network/get-solc@master
+      - name: Caching
+        uses: Swatinem/rust-cache@v2
       - name: Run test of deployer.rs
         run: |
           cd crates/l2/contracts
