--- a/.github/workflows/ci_l2_prover.yaml
+++ b/.github/workflows/ci_l2_prover.yaml
@@ -25,6 +25,8 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
+      - name: Add Rust Cache
+        uses: Swatinem/rust-cache@v2
       - name: ${{ matrix.action.command }} Command
         run: cargo ${{ matrix.action.command }} ${{ matrix.action.args }}
 
