--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -30,6 +30,9 @@ jobs:
         with:
           toolchain: ${{ env.RUST_VERSION }}
 
+      - name: Caching
+        uses: Swatinem/rust-cache@v2
+
       - name: Download EF Tests
         run: |
           cd crates/vm/levm
