--- a/.github/workflows/ci_loc_pr.yaml
+++ b/.github/workflows/ci_loc_pr.yaml
@@ -19,6 +19,9 @@ jobs:
         with:
           components: rustfmt, clippy
 
+      - name: Set up cargo cache
+        uses: Swatinem/rust-cache@v2
+
       - name: Run Lines of Code Counter for PR
         run: make loc-detailed
 
