--- a/.github/workflows/flamegraph_reporter.yaml
+++ b/.github/workflows/flamegraph_reporter.yaml
@@ -176,6 +176,9 @@ jobs:
         with:
           toolchain: ${{ env.RUST_VERSION }}
 
+      - name: Caching
+        uses: Swatinem/rust-cache@v2
+
       - name: Cache Extra Binaries
         id: cache-binaries
         uses: actions/cache@v4
