--- a/crates/l2/prover/zkvm/interface/Cargo.toml
+++ b/crates/l2/prover/zkvm/interface/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.203", features = ["derive"] }
 serde_with = "3.11.0"
-serde_json.workspace = true
+serde_json = "1.0.117"
 thiserror = "2.0.9"
 
 ethrex-common = { path = "../../../../common/", default-features = false }
@@ -14,6 +14,9 @@ ethrex-vm = { path = "../../../../vm", default-features = false }
 ethrex-rlp = { path = "../../../../common/rlp", default-features = false }
 ethrex-storage = { path = "../../../../storage", default-features = false }
 ethrex-trie = { path = "../../../../common/trie", default-features = false }
+
+# Temporarily pin version because 0.11.1 breaks compilation
+alloy-rpc-types-engine = "=0.11.0"
 
 [build-dependencies]
 risc0-build = { version = "1.2.2", optional = true }
