--- a/crates/l2/prover/zkvm/interface/pico/Cargo.toml
+++ b/crates/l2/prover/zkvm/interface/pico/Cargo.toml
@@ -14,6 +14,9 @@ ethrex-rlp = { path = "../../../../../common/rlp" }
 ethrex-vm = { path = "../../../../../vm", default-features = false }
 ethrex-blockchain = { path = "../../../../../blockchain", default-features = false }
 
+# Temporarily pin version because 0.11.1 breaks compilation
+alloy-rpc-types-engine = "=0.11.0"
+
 [patch.crates-io]
 # Pico has its own patch for secp256k1 but it doesn't compile: it has a git dependency for a branch that
 # doesn't exists, and another git dependency to an seemingly private repo. The SP1 patch worked well.
