--- a/crates/l2/Cargo.toml
+++ b/crates/l2/Cargo.toml
@@ -36,7 +36,7 @@ risc0-zkvm = { version = "1.2.2" }
 # sp1
 sp1-sdk = { version = "4.1.1" }
 sp1-recursion-gnark-ffi = "4.1.1"
-ethrex-sdk = { path = "./sdk" }
+ethertools-sdk.workspace = true
 
 ethrex-metrics = { path = "../blockchain/metrics", default-features = false }
 
