--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,3 +74,7 @@ secp256k1 = { version = "0.29.1", default-features = false, features = [
 ] }
 keccak-hash = "0.11.0"
 axum = "0.8.1"
+
+[profile.release]
+lto = "fat"
+opt-level = 3
