--- a/crates/l2/docker-compose-l2.yaml
+++ b/crates/l2/docker-compose-l2.yaml
@@ -14,7 +14,7 @@ services:
     volumes:
       - ./contracts:/contracts
       - ./config.toml:/config.toml
-      - .env:/.env
+      - ./.env:/.env
     environment:
       - ETH_RPC_URL=http://ethrex_l1:8545
       - DEPLOYER_CONTRACTS_PATH=/contracts
@@ -41,7 +41,7 @@ services:
       - ENV_FILE=/.env
     volumes:
       - ../../test_data/genesis-l2.json:/genesis-l2.json
-      - .env:/.env:ro
+      - ./.env:/.env:ro
       - ./config.toml:/config.toml:ro
     command: --network /genesis-l2.json --http.addr 0.0.0.0 --http.port 1729 --authrpc.port 8552
     depends_on:
