--- a/crates/l2/Makefile
+++ b/crates/l2/Makefile
@@ -170,7 +170,7 @@ ci_test: ## 🚧 Runs the L2's integration test, used by the github's CI
 	ETHREX_WORKDIR=${ETHREX_WORKDIR} docker compose -f ${ethrex_L2_DOCKER_COMPOSE_PATH} down
 
 test: ## 🚧 Runs the L2's integration test, run `make init` and in a new terminal make test
-	cargo test l2 --release -- --nocapture --test-threads=1 || (echo "The tests have failed.\n Is the L2 running? To start it run:\n make rm-db-l1; make rm-db-l2; make restart" ; exit 1)
+	cargo test l2 --release -- --nocapture --test-threads=1 || (echo "The tests have failed.\n Is the L2 running? To start it, run:\n make rm-db-l1; make rm-db-l2; make restart" ; exit 1)
 
 
 # Purge L2's state
