Restore main dockerfile workdir and move env variable usage to L2
Signed-off-by: Tomas Fabrizio Orsi <tomas.orsi@lambdaclass.com>

--- a/crates/l2/Dockerfile
+++ b/crates/l2/Dockerfile
@@ -25,7 +25,8 @@ COPY . .
 RUN cargo build --release --features l2
 
 FROM ubuntu:24.04
-WORKDIR /usr/local/bin
+ENV ETHREX_WORKDIR=$ETHREX_WORKDIR
+WORKDIR $ETHREX_WORKDIR
 
 COPY --from=builder ethrex/target/release/ethrex .
 EXPOSE 1729
