Change to libmdbx.

--- a/cmd/ef_tests/blockchain/Cargo.toml
+++ b/cmd/ef_tests/blockchain/Cargo.toml
@@ -15,6 +15,7 @@ serde_json.workspace = true
 bytes.workspace = true
 hex.workspace = true
 lazy_static.workspace = true
+rand = "0.8"
 
 [dev-dependencies]
 datatest-stable = "0.2.9"
@@ -24,9 +25,10 @@ criterion = "0.3"
 path = "./lib.rs"
 
 [features]
-default = ["c-kzg", "blst"]
+default = ["c-kzg", "blst", "libmdbx"]
 blst = ["ethrex-vm/blst"]
 c-kzg = ["ethrex-blockchain/c-kzg"]
+libmdbx = ["ethrex-storage/libmdbx"]
 
 [[test]]
 name = "cancun"
