--- a/crates/l2/prover/bench/Cargo.toml
+++ b/crates/l2/prover/bench/Cargo.toml
@@ -36,6 +36,7 @@ revm = { version = "19.0.0", features = [
 
 # These dependencies must be kept up to date with the corresponding revm version, otherwise errors may pop up because of trait implementation mismatches
 revm-inspectors = { version = "0.15.0" }
+derive_more = { version = "1.0.0", features = ["full"] }
 revm-primitives = { version = "15.2.0", features = [
   "std",
 ], default-features = false }
