--- a/.github/workflows/ci_loc_pr.yaml
+++ b/.github/workflows/ci_loc_pr.yaml
@@ -37,6 +37,8 @@ jobs:
     steps:
       - name: Checkout Base
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Checkout Base Commit
         run: |
