--- a/.github/workflows/ci_loc_pr.yaml
+++ b/.github/workflows/ci_loc_pr.yaml
@@ -38,13 +38,14 @@ jobs:
       - name: Checkout Base
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}
+          fetch-depth: 0
 
       - name: Checkout Base Commit
         run: |
           BASE_BRANCH=${{ github.base_ref }}
           echo "Base branch: $BASE_BRANCH"
-          git merge-base HEAD $BASE_BRANCH
+          git fetch origin $BASE_BRANCH
+          git checkout $(git merge-base HEAD origin/$BASE_BRANCH)
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@1.82.0
