--- a/.github/workflows/ci_bench_block_execution.yaml
+++ b/.github/workflows/ci_bench_block_execution.yaml
@@ -40,63 +40,63 @@ jobs:
         mkdir bin
         cp target/release/ethrex bin/ethrex-${{ matrix.branch }}
 
-  run-hyperfine:
-    name: Run benchmark against main
-    needs: [ build-binaries ]
-    runs-on: ubuntu-22.04
-    steps:
-    - name: Checkout PR
-      uses: actions/checkout@v4
-      with:
-        ref: ${{ github.head_ref }}
+  # run-hyperfine:
+  #   name: Run benchmark against main
+  #   needs: [ build-binaries ]
+  #   runs-on: ubuntu-22.04
+  #   steps:
+  #   - name: Checkout PR
+  #     uses: actions/checkout@v4
+  #     with:
+  #       ref: ${{ github.head_ref }}
 
-    - name: Install Hyperfine
-      uses: taiki-e/install-action@v2
-      with:
-        tool: hyperfine@1.16
+  #   - name: Install Hyperfine
+  #     uses: taiki-e/install-action@v2
+  #     with:
+  #       tool: hyperfine@1.16
 
-    - name: Fetch base binary
-      uses: actions/cache/restore@v3
-      with:
-        path: bin/ethrex-base
-        key: binary-${{ github.event.pull_request.base.sha }}
+  #   - name: Fetch base binary
+  #     uses: actions/cache/restore@v3
+  #     with:
+  #       path: bin/ethrex-base
+  #       key: binary-${{ github.event.pull_request.base.sha }}
 
-    - name: Fetch HEAD binary
-      uses: actions/cache/restore@v3
-      with:
-        path: bin/ethrex-head
-        key: binary-${{ github.event.pull_request.head.sha }}
+  #   - name: Fetch HEAD binary
+  #     uses: actions/cache/restore@v3
+  #     with:
+  #       path: bin/ethrex-head
+  #       key: binary-${{ github.event.pull_request.head.sha }}
 
-    - name: Benchmark against main
-      id: run-benchmarks
-      run: |
-        sudo swapoff -a
-        BINS="base,head"
-        hyperfine -w 5 -N -r 10 --export-markdown "benchmark_comparison_against_main.md" \
-        -L bin "$BINS" -n "{bin}" \
-        "./bin/ethrex-{bin} --network test_data/genesis-l2.json \
-        --import ./test_data/l2-loadtest.rlp --only_import""
+  #   - name: Benchmark against main
+  #     id: run-benchmarks
+  #     run: |
+  #       sudo swapoff -a
+  #       BINS="base,head"
+  #       hyperfine -w 5 -N -r 10 --export-markdown "benchmark_comparison_against_main.md" \
+  #       -L bin "$BINS" -n "{bin}" \
+  #       "./bin/ethrex-{bin} --network test_data/genesis-l2.json \
+  #       --import ./test_data/l2-loadtest.rlp --only_import""
 
-    - name: Upload PR results
-      uses: actions/upload-artifact@v4
-      with:
-        name: pr-result
-        path: bench_pr_comparison.md
+  #   - name: Upload PR results
+  #     uses: actions/upload-artifact@v4
+  #     with:
+  #       name: pr-result
+  #       path: bench_pr_comparison.md
 
-    - name: Find comment
-      continue-on-error: true
-      uses: peter-evans/find-comment@v3
-      id: fc
-      with:
-        issue-number: ${{ github.event.pull_request.number }}
-        comment-author: "github-actions[bot]"
-        body-includes: "Benchmark Block Execution Results Comparison Against Main"
+  #   - name: Find comment
+  #     continue-on-error: true
+  #     uses: peter-evans/find-comment@v3
+  #     id: fc
+  #     with:
+  #       issue-number: ${{ github.event.pull_request.number }}
+  #       comment-author: "github-actions[bot]"
+  #       body-includes: "Benchmark Block Execution Results Comparison Against Main"
 
-    - name: Create or update comment
-      uses: peter-evans/create-or-update-comment@v4
-      with:
-        comment-id: ${{ steps.fc.outputs.comment-id }}
-        token: ${{ secrets.GITHUB_TOKEN }}
-        issue-number: ${{ github.event.pull_request.number }}
-        body-path: bench_pr_comparison.md
-        edit-mode: replace
+  #   - name: Create or update comment
+  #     uses: peter-evans/create-or-update-comment@v4
+  #     with:
+  #       comment-id: ${{ steps.fc.outputs.comment-id }}
+  #       token: ${{ secrets.GITHUB_TOKEN }}
+  #       issue-number: ${{ github.event.pull_request.number }}
+  #       body-path: bench_pr_comparison.md
+  #       edit-mode: replace
