--- a/.github/workflows/ci_bench_block_execution.yaml
+++ b/.github/workflows/ci_bench_block_execution.yaml
@@ -6,39 +6,39 @@ on:
 
 jobs:
   build-binaries:
-  strategy:
-    matrix:
-      branch: [ base, head ]
-  name: Build ethrex for ${{ matrix.branch }}
-  runs-on: ubuntu-22.04
-  steps:
-    - name: Populate cache
-      uses: actions/cache@v3
-      id: cache
-      with:
-        path: bin/ethrex-${{ matrix.branch }}
-        key: binary-${{ github.event.pull_request[matrix.branch].sha }}
-
-    # - name: Install Rust
-    #   if: ${{ steps.cache.outputs.cache-hit != 'true' }}
-    #   uses: dtolnay/rust-toolchain@stable
-
-    # - name: Checkout
-    #   if: ${{ steps.cache.outputs.cache-hit != 'true' }}
-    #   uses: actions/checkout@v3
-    #   with:
-    #     ref: ${{ github.event.pull_request[matrix.branch].sha }}
-
-    # - name: Fetch Rust cache
-    #   if: ${{ steps.cache.outputs.cache-hit != 'true' }}
-    #   uses: Swatinem/rust-cache@v2
-
-    # - name: Build binary
-    #   if: ${{ steps.cache.outputs.cache-hit != 'true' }}
-    #   run: |
-    #     cargo b --release --bin ethrex
-    #     mkdir bin
-    #     cp target/release/ethrex bin/ethrex-${{ matrix.branch }}
+    strategy:
+      matrix:
+        branch: [ base, head ]
+    name: Build ethrex for ${{ matrix.branch }}
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Populate cache
+        uses: actions/cache@v3
+        id: cache
+        with:
+          path: bin/ethrex-${{ matrix.branch }}
+          key: binary-${{ github.event.pull_request[matrix.branch].sha }}
+  
+      - name: Install Rust
+        if: ${{ steps.cache.outputs.cache-hit != 'true' }}
+        uses: dtolnay/rust-toolchain@stable
+  
+      - name: Checkout
+        if: ${{ steps.cache.outputs.cache-hit != 'true' }}
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request[matrix.branch].sha }}
+  
+      - name: Fetch Rust cache
+        if: ${{ steps.cache.outputs.cache-hit != 'true' }}
+        uses: Swatinem/rust-cache@v2
+  
+      - name: Build binary
+        if: ${{ steps.cache.outputs.cache-hit != 'true' }}
+        run: |
+          cargo b --release --bin ethrex
+          mkdir bin
+          cp target/release/ethrex bin/ethrex-${{ matrix.branch }}
 
   # run-hyperfine:
   #   name: Run benchmark against main
